--- a/packages/cli/src/commands/experimental/templates/streamingSsr/Document.tsx.template
+++ b/packages/cli/src/commands/experimental/templates/streamingSsr/Document.tsx.template
@@ -1,7 +1,7 @@
 import React from 'react'
 
-import { Css, Meta } from '@redwoodjs/web/dist/components/htmlTags'
-import type { TagDescriptor } from '@redwoodjs/web/dist/components/htmlTags'
+import { Css, Meta } from '@redwoodjs/web'
+import type { TagDescriptor } from '@redwoodjs/web'
 
 interface DocumentProps {
   children: React.ReactNode
