--- a/package.json
+++ b/package.json
@@ -113,8 +113,5 @@
     "zx": "7.2.3"
   },
   "packageManager": "yarn@4.1.1",
-  "npmClient": "yarn",
-  "dependencies": {
-    "@redwoodjs/vite": "workspace:^"
-  }
+  "npmClient": "yarn"
 }
