--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -237,6 +237,8 @@ jobs:
 
       - name: Run `rw build --no-prerender`
         run: |
+          yarn why @apollo/client
+          tree .yarn
           yarn rw build --no-prerender
         working-directory: ${{ steps.set-up-test-project.outputs.test-project-path }}
 
