--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -37,7 +37,7 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@apollo/client": "patch:@apollo/client@npm%3A3.9.9#~/.yarn/patches/@apollo-client-npm-3.9.9-15c2e13518.patch",
+    "@apollo/client": "3.9.9",
     "@babel/runtime-corejs3": "7.24.1",
     "@redwoodjs/auth": "workspace:*",
     "core-js": "3.36.1",
