Update entry.server template for streaming ssr

--- a/packages/cli/src/commands/experimental/templates/streamingSsr/entry.server.tsx.template
+++ b/packages/cli/src/commands/experimental/templates/streamingSsr/entry.server.tsx.template
@@ -2,6 +2,7 @@ import type { TagDescriptor } from '@redwoodjs/web'
 
 import App from './App'
 import { Document } from './Document'
+import Routes from './Routes'
 
 interface Props {
   css: string[]
@@ -11,7 +12,9 @@ interface Props {
 export const ServerEntry: React.FC<Props> = ({ css, meta }) => {
   return (
     <Document css={css} meta={meta}>
-      <App />
+      <App>
+        <Routes />
+      </App>
     </Document>
   )
 }
