Fix radio button null element default prop to use correct input

--- a/packages/cli/src/commands/generate/scaffold/templates/components/NameForm.tsx.template
+++ b/packages/cli/src/commands/generate/scaffold/templates/components/NameForm.tsx.template
@@ -68,7 +68,7 @@ const ${singularPascalName}Form = (props: ${singularPascalName}FormProps) => {
               ${idName}="${singularCamelName}-${column.name}-none"
               name="${column.name}"
               defaultValue=""
-              ${column.defaultProp}={!props.spot?.spotType}
+              ${column.defaultProp}={!props.${singularCamelName}?.${column.name}}
               className="rw-input"
               errorClassName="rw-input rw-input-error"
             />
