--- a/packages/auth-providers/supabase/web/tsconfig.json
+++ b/packages/auth-providers/supabase/web/tsconfig.json
@@ -5,6 +5,6 @@
     "rootDir": "src",
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "./ambient.d.ts"],
   "references": [{ "path": "../../../auth" }]
 }
