--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
   "peacock.color": "#b85833",
   "cSpell.words": [
     "autoplay",
+    "baremetal",
     "corepack",
     "envinfo",
     "execa",
