Update api config per feedback

--- a/packages/auth-providers/supabase/api/tsconfig.json
+++ b/packages/auth-providers/supabase/api/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "rootDir": "src",
-    "outDir": "dist",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "outDir": "dist"
   },
   "include": ["src"],
   "references": [{ "path": "../../../auth" }, { "path": "../../../vite" }]
