Add supabase/ssr as dependency

--- a/packages/auth-providers/supabase/api/package.json
+++ b/packages/auth-providers/supabase/api/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.24.1",
+    "@supabase/ssr": "0.3.0",
     "core-js": "3.36.1",
     "jsonwebtoken": "9.0.2"
   },
