--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -8,6 +8,7 @@
   "references": [
     { "path": "../internal" },
     { "path": "../project-config" },
+    { "path": "../router" },
     { "path": "../web" }
   ]
 }
