--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -34,6 +34,10 @@
     "./middleware": {
       "types": "./dist/middleware/index.d.ts",
       "default": "./dist/middleware/index.js"
+    },
+    "./serverStore": {
+      "types": "./dist/serverStore.d.ts",
+      "default": "./dist/serverStore.js"
     }
   },
   "bin": {
