--- a/packages/realtime/package.json
+++ b/packages/realtime/package.json
@@ -31,8 +31,7 @@
     "@graphql-yoga/subscription": "5.0.0",
     "@n1ru4l/graphql-live-query": "0.10.0",
     "@n1ru4l/in-memory-live-query-store": "0.10.0",
-    "graphql": "16.8.1",
-    "ioredis": "^5.3.2"
+    "graphql": "16.8.1"
   },
   "devDependencies": {
     "@envelop/core": "5.0.0",
