--- a/packages/realtime/package.json
+++ b/packages/realtime/package.json
@@ -38,6 +38,7 @@
     "@envelop/testing": "7.0.0",
     "@envelop/types": "5.0.0",
     "@redwoodjs/framework-tools": "workspace:*",
+    "ioredis": "^5.3.2",
     "nodemon": "3.1.0",
     "tsx": "4.7.1",
     "typescript": "5.4.5",
