chore(ssr): Make entry.client.tsx better match standard entry.client

--- a/packages/cli/src/commands/experimental/templates/streamingSsr/entry.client.tsx.template
+++ b/packages/cli/src/commands/experimental/templates/streamingSsr/entry.client.tsx.template
@@ -12,6 +12,13 @@ import Routes from './Routes'
  */
 const redwoodAppElement = document.getElementById('redwood-app')
 
+if (!redwoodAppElement) {
+  throw new Error(
+    "Could not find an element with ID 'redwood-app'. Please ensure it " +
+      "exists in your 'web/src/index.html' file."
+  )
+}
+
 if (redwoodAppElement.children?.length > 0) {
   hydrateRoot(
     document,
