--- a/packages/cli/src/commands/experimental/templates/rsc/Routes.tsx.template
+++ b/packages/cli/src/commands/experimental/templates/rsc/Routes.tsx.template
@@ -7,14 +7,18 @@
 // 'src/pages/HomePage/HomePage.js'         -> HomePage
 // 'src/pages/Admin/BooksPage/BooksPage.js' -> AdminBooksPage
 
-import { Router, Route, Set } from '@redwoodjs/router'
+import { Route } from '@redwoodjs/router/dist/Route'
+import { Set } from '@redwoodjs/router/dist/Set'
+// @ts-expect-error - ESM issue. RW projects need to be ESM to properly pick up
+// on the types here
+import { Router } from '@redwoodjs/vite/Router'
 
 import NavigationLayout from 'src/layouts/NavigationLayout'
 import NotFoundPage from 'src/pages/NotFoundPage'
 
-const Routes = () => {
+const Routes = ({ location }: { location?: any }) => {
   return (
-    <Router>
+    <Router location={location}>
       <Set wrap={NavigationLayout}>
         <Route path="/" page={HomePage} name="home" />
         <Route path="/about" page={AboutPage} name="about" />
