--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -22,6 +22,11 @@
       "types": "./dist/clientSsr.d.ts",
       "default": "./dist/clientSsr.js"
     },
+    "./Router": {
+      "types": "./dist/ClientRouter.d.ts",
+      "react-server": "./dist/ServerRouter.js",
+      "default": "./dist/ClientRouter.js"
+    },
     "./buildFeServer": {
       "types": "./dist/buildFeServer.d.ts",
       "default": "./dist/buildFeServer.js"
