--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -20,9 +20,9 @@
     "build:types": "tsc --build --verbose",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
-    "test": "jest",
+    "test": "vitest run",
     "test:types": "tstyche",
-    "test:watch": "yarn test --watch"
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.24.5",
@@ -32,14 +32,14 @@
   "devDependencies": {
     "@babel/cli": "7.24.5",
     "@babel/core": "^7.22.20",
+    "@testing-library/jest-dom": "6.4.5",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "react": "19.0.0-beta-04b058868c-20240508",
     "react-dom": "19.0.0-beta-04b058868c-20240508",
     "tstyche": "1.1.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vitest": "1.6.0"
   },
   "peerDependencies": {
     "react": "19.0.0-beta-04b058868c-20240508",
