--- a/packages/cli-packages/storybook-vite/tsconfig.json
+++ b/packages/cli-packages/storybook-vite/tsconfig.json
@@ -5,4 +5,9 @@
     "outDir": "dist"
   },
   "include": ["src"],
+  "references": [
+    { "path": "../../cli-helpers" },
+    { "path": "../../project-config" },
+    { "path": "../../telemetry" },
+  ]
 }
