--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -25,7 +25,7 @@
     "./Router": {
       "types": "./dist/ClientRouter.d.ts",
       "react-server": "./dist/ServerRouter.js",
-      "default": "./dist/ClientRouter.js"
+      "default": "./dist/SsrRouter.js"
     },
     "./buildFeServer": {
       "types": "./dist/buildFeServer.d.ts",
